# python-webapp-boilerplate

./: .env-example  .gitignore  README.md  docker-compose.yaml
aws-bootstrapper/: Dockerfile  pyproject.toml
aws-bootstrapper/infra/: Pulumi.backendapi.yaml  requirements.txt
backend-api/: Dockerfile  pyproject.toml
backend-api/src/routes/: users.py
backend-api/src/services/: users.py
backend-api/tests/: test_main.py
backend-svc/: Dockerfile  pyproject.toml
backend-svc/src/: main.py
backend-svc/src/routes/: users.py
backend-svc/src/services/: users.py
backend-svc/src/utils/: envvars.py  validators.py
backend-svc/tests/: test_main.py
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: backend-api-benchmark-job.yaml  backend-api-benchmark-pv.yaml  backend-api-benchmark-pvc.yaml  backend-api-deployment.yaml  backend-api-e2etest-job.yaml  backend-api-pdb.yaml  backend-api-service-account.yaml  backend-api-service.yaml  deployment-backend-api.yaml  deployment-localstack.yaml  hpa-backend-api.yaml  job-pulumi.yaml  localstack-deployment.yaml  pulumi-job.yaml  service-backend-api.yaml  service-localstack.yaml
k6/: Dockerfile
k6/src/: bench.js
pulumi/: Dockerfile
pulumi/infra/: Pulumi.yaml  __main__.py  requirements.txt
scripts/: build_docker_image.sh  destroy_app_cluster.sh  rebuild_app_and_deploy.sh  rebuild_backend_api.sh  rebuild_k6.sh  rebuild_pulumi.sh  run_app_benchmark.sh  run_app_cluster.sh  run_app_tests.sh  run_e2e_tests_app_cluster.sh  start_backend_api.sh  start_docker_container_locally.sh  start_localstack.sh
