[tool.poetry]
name = "aws-bootstrapper"
version = "0.1.0"
description = ""
authors = ["Alessandro Bolletta <alexpacio91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulumi-local = "^1.2.2"
awscli-local = "^0.22.0"
awscli = "^1.34.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
