[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = "Sample FastAPI app"
authors = ["Alessandro Bolletta <no@email.invalid>"]
readme = "README.md"
include=['src']

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
